Fixed borken image path

--- a/angularjs-slides/index.html
+++ b/angularjs-slides/index.html
@@ -236,7 +236,7 @@ var SimpleCtrl = function ($scope) {
                     <h2>
                         Templating lifecycle
                     </h2>
-                    <img src="/img/concepts-view.png" width="55%"/>
+                    <img src="img/concepts-view.png" width="55%"/>
 
                     <p>
                         Source: <a href="http://docs.angularjs.org/guide/concepts">http://docs.angularjs.org/guide/concepts</a>
